send and get messages
